k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
  namespace: default
  labels:
    app: microservice
spec:
  selector:
    matchLabels:
      app: microservice
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: microservice
        image:  docker.io/anikesh372/microservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  3000
          name: microservice
