k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-services
  namespace: default
spec:
  selector:
    app: microservice
  type: ClusterIP
  ports:
  - name: microservice
    protocol: TCP
    port: 80   # Service port
    targetPort: 80   # Container port exposed in Dockerfile
